<resources>
    <string name="app_name">FrontEndCOMP4342</string>
    <string name="friend_list_title">Friend List</string>

    <string name="Katou">Katou Megumi</string>
    <string name="Sora">Sora Ginko</string>
    <string name="Misaka">Misaka Mikoto</string>
    <string name="back_button">Back</string>
    <string name="K">K</string>
    <string name="welcome_to_chatnexus">Welcome to ChatNexus</string>
    <string name="please_login">Please Login</string>
    <string name="e_mail_address">E-Mail Address:</string>
    <string name="password">Password:      </string>
    <string name="login">Login</string>
    <string name="do_not_have_chatnexus_account_yet_register_now">Do not have ChatNexus account yet? Register now!</string>
    <string name="register">Register</string>
    <string name="new_register">New Register</string>
    <string name="user_name">User Name:</string>
    <string name="friend_name"><![CDATA[<friend_name>]]></string>
    <string name="friend_username"><![CDATA[<friend_userName>]]></string>
    <string name="hello">Hello</string>
    <string name="send">send</string>
    <string name="no">no</string>
</resources>