<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:text="@string/welcome_to_chatnexus"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="190dp"/>
    <TextView
        android:text="@string/please_login"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/e_mail_address"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/user_input_address"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10">

            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/password"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_input_password"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:ems="10" >
            <requestFocus />
        </EditText>
    </LinearLayout>
    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/register_button"
        android:text="@string/register"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/do_not_have_chatnexus_account_yet_register_now"
        android:textSize="13sp"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />




</LinearLayout>