<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="190dp"
            android:text="@string/welcome_to_chatnexus"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/new_register"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/user_input_userName"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:ems="10">
                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_address"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/user_input_address"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10">
                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/user_input_password"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:ems="10">
                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/register" />

    </LinearLayout>
</LinearLayout>